fixed the extra spacing with overflow x hidden and added media query for navbar

--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@
 body,
 html {
   scroll-padding-top: 12rem;
+  overflow-x: hidden;
 }
 body {
   display: grid;
@@ -24,6 +25,7 @@ body {
   display: flex;
   justify-content: space-between;
   width: 100%;
+  height: 100px;
   top: 0;
   padding: 20px;
   background-color: #000;
@@ -224,4 +226,30 @@ a:active {
     font-size: 2rem;
     align-items: center;
   }
+}
+@media only screen and (max-width: 900px){
+  #header{
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 0;
+  }
+   #header h1{
+    font-size: 1rem;
+    
+    
+   }
+   #header img{
+    width: 3rem;
+    height: 3rem;
+   }
+   #header #nav-bar{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 10px;
+    width: 100%;
+    top: 0;
+    font-size: 1rem;
+   }
 }
